# AI-Powered-Text-Generation-Portal

./: README.md  pyproject.toml
cleaning_data/: cleaning.py
myNanoGPT/: app.py  config.py  index.html  pyproject.toml  sample.py  train.py
myNanoGPT/data/movies/: meta.pkl
